--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -32,7 +32,7 @@
       <p class="text-large">
         Thousands of tools are waiting to be installed from the
         <a href="https://toolshed.g2.bx.psu.edu/" target="_blank">Galaxy Toolshed</a>.
-        You can also request additions (e.g. genomes) to Galaxy's reference datasets.
+        You can also request additions to Galaxy's reference datasets (e.g. genomes).
       </p>
       <br>
       <a class="ga-btn" href="/request/tool">
