--- a/webapp/home/static/home/css/request-form.css
+++ b/webapp/home/static/home/css/request-form.css
@@ -20,7 +20,8 @@ main {
   max-height: 500px;
 }
 ul.errorlist {
-  padding: .5rem 1rem;
+  margin: .5rem 0;
+  padding: .25rem .5rem;
   color: var(--error);
   list-style-type: none;
   border: 1px solid var(--error);
