--- a/webapp/home/templates/home/requests/mail/quota.html
+++ b/webapp/home/templates/home/requests/mail/quota.html
@@ -27,21 +27,7 @@
       </tr>
 
       <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Institution </th>
-        <td style="padding: 10px; border: 1px solid grey;">
-          {{ form.cleaned_data.institution }}
-        </td>
-      </tr>
-
-      <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Group name / PI </th>
-        <td style="padding: 10px; border: 1px solid grey;">
-          {{ form.cleaned_data.group_name }}
-        </td>
-      </tr>
-
-      <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Analysis start date (d-m-y) </th>
+        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Analysis start date (dd-mm-yyyy) </th>
         <td style="padding: 10px; border: 1px solid grey;">
           {{ form.cleaned_data.start_date|date:"d-m-Y" }}
         </td>
@@ -50,15 +36,15 @@
       <tr>
         <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Duration of analysis</th>
         <td style="padding: 10px; border: 1px solid grey;">
-          {{ form.cleaned_data.duration }} month(s)
+          {{ form.cleaned_data.duration_months }} month(s)
         </td>
       </tr>
 
       <tr>
         <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Disk required </th>
         <td style="padding: 10px; border: 1px solid grey;">
-          {% if form.cleaned_data.disk_gb %}
-          {{ form.cleaned_data.disk_gb }}GB
+          {% if form.cleaned_data.disk_tb %}
+          {{ form.cleaned_data.disk_tb }}TB
           {% else %}
           I'm not sure, please contact me
           {% endif %}
@@ -66,37 +52,9 @@
       </tr>
 
       <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Description </th>
+        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Justification </th>
         <td style="padding: 10px; border: 1px solid grey;">
           {{ form.cleaned_data.description }}
-        </td>
-      </tr>
-
-      <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Organism </th>
-        <td style="padding: 10px; border: 1px solid grey;">
-          {{ form.cleaned_data.organism }}
-        </td>
-      </tr>
-
-      <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Technology </th>
-        <td style="padding: 10px; border: 1px solid grey;">
-          {{ form.cleaned_data.technology }}
-        </td>
-      </tr>
-
-      <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> File type </th>
-        <td style="padding: 10px; border: 1px solid grey;">
-            {{ form.cleaned_data.file_type }}
-        </td>
-      </tr>
-
-      <tr>
-        <th style="padding: 10px; border: 1px solid grey; font-weight: bold;"> Max samples to upload </th>
-        <td style="padding: 10px; border: 1px solid grey;">
-            {{ form.cleaned_data.max_samples }}
         </td>
       </tr>
 
@@ -106,7 +64,6 @@
             {{ form.cleaned_data.accepted_terms|yesno:"Yes,No" }}
         </td>
       </tr>
-
     </tbody>
   </table>
   </body>
