Update ansible to include recaptcha and slack API in .env

--- a/deploy/ansible/roles/webapp/templates/.env.j2
+++ b/deploy/ansible/roles/webapp/templates/.env.j2
@@ -12,3 +12,8 @@ MAIL_SMTP_PASSWORD={{ smtp_password }}
 MAIL_FROM_ADDRESS={{ smtp.from_address }}
 MAIL_TO_ADDRESS={{ smtp.to_address }}
 MAIL_USE_TLS={{ smtp.use_tls }}
+
+RECAPTCHA_SITE_KEY={{ recaptcha_site_key }}
+RECAPTCHA_SECRET_KEY={{ recaptcha_secret_key }}
+
+SLACK_API_URL={{ slack_api_url }}
