--- a/deploy/ansible/roles/webapp/templates/setup.sh.j2
+++ b/deploy/ansible/roles/webapp/templates/setup.sh.j2
@@ -16,4 +16,4 @@ python manage.py collectstatic --noinput
 sudo systemctl daemon-reload
 sudo systemctl enable webapp.service
 sudo systemctl enable webapp.socket
-sudo service webapp start
+sudo service webapp restart
