Update "People" profile image styling

--- a/webapp/people/static/people/css/people.css
+++ b/webapp/people/static/people/css/people.css
@@ -11,6 +11,10 @@
   background-color: inherit;
   border-top: none;
 }
+.card-img-top {
+  height: 300px;
+  object-fit: cover;
+}
 
 /* Responsive */
 @media(max-width: 576px) {
