--- a/webapp/home/templates/home/requests/tool.html
+++ b/webapp/home/templates/home/requests/tool.html
@@ -181,7 +181,7 @@
       </div>
 
       <div class="mb-10">
-        <label for="justificationInput" class="form-label">Justification for this resource</label>
+        <label for="justificationInput" class="form-label">Justification and comments</label>
         {{ form.resource_justification.errors }}
         <textarea class="form-control" id="justificationInput" name="resource_justification"
           aria-describedby="justificationHelp" rows="4" required
