--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -235,15 +235,19 @@
       <div class="col">
         <p>
           Your data limits on Galaxy Australia depend on how you register with
-          the service. We provide greater privileges to
+          the service. We provide greater privileges to verified
           <a href="/about#list-of-institutions">Australian Researchers</a>.
         </p>
       </div>
 
       <div class="col">
         <p class="text-center">
+          <a class="ga-btn" href="/about#feature-catalogue">
+            Your data limits
+          </a>
+          <br>
           <a class="ga-btn" href="/about#data-privacy">
-            Read our data policy
+            Data privacy policy
           </a>
         </p>
       </div>
