Update about page with live AAF list

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -236,7 +236,7 @@
         <p>
           Your data limits on Galaxy Australia depend on how you register with
           the service. We provide greater privileges to verified
-          <a href="/about#list-of-institutions">Australian Researchers</a>.
+          <a href="/list-of-institutions.html">Australian Researchers</a>.
         </p>
       </div>
 
