--- a/webapp/home/templates/home/snippets/about/feature-catalogue.html
+++ b/webapp/home/templates/home/snippets/about/feature-catalogue.html
@@ -103,7 +103,7 @@
   <ul>
     <li>
       <em>“Registered Australian Researchers”</em> are those with accounts registered using an email address from our
-      <a href="#list-of-institutions">List of Australian Research Institutions</a>
+      <a href="/list-of-institutions.html">List of Australian Research Institutions</a>
     </li>
 
     <li>
