--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -1,15 +1,8 @@
 <h1> About Galaxy Australia </h1>
 
-<p>
-  Galaxy Australia provides researchers with <b>free access</b> to:
+<p class="lead">
+  Galaxy Australia provides researchers with free access to a high-performance computing network through a simple web interface.
 </p>
-
-<ul>
-  <li>Huge compute and storage resource</li>
-  <li>600 GB for Australian researchers (100GB for other users)</li>
-  <li>Over 1000 well-documented, maintained tools (bioinformatics and others)</li>
-  <li>No programming experience required</li>
-</ul>
 
 <p>
   Galaxy Australia maintains tools, workflows and reference datasets as requested by the Australian research community, making the platform the ideal place for Australian researchers to perform their analyses. If we do not currently support your specific application or species then we will endeavour to make it available. Please,
@@ -65,63 +58,11 @@
   <strong>Galaxy Australia</strong> is one of the large Galaxy servers that make up the <strong>usegalaxy.*</strong> initiative. Along with <strong>Galaxy Europe</strong> (<a href="https://usegalaxy.eu">usegalaxy.eu</a>) and <strong>Galaxy Main</strong> in the USA (<a href="https://usegalaxy.org">usegalaxy.org</a>), the <strong>usegalaxy.*</strong> servers aim to provide a global publicly available bioinformatics resource, present a similar look and feel, similar installed tool sets and reference data and indices.
 </p>
 
-<p>We do this via a network of globally distributed reference servers using the CernVM-FS and a few public git repositories. For more information on usegalaxy.* see the <a href="https://galaxyproject.org/usegalaxy/">Galaxy Project Community Hub</a>
-</p>
-
-<hr>
-
-<h3 id="visualisation-and-data-interpretation">
-  <span class="material-icons py-1">insights</span>
-  Visualisation &amp; Data Interpretation
-</h3>
-
-<p>Publication-ready visualisations can be instantly generated inside Galaxy. A variety of chart options (bar diagram, line charts, box plots) are available as default on any dataset capable of being graphed. Complex visualisation such as heatmaps, Venn diagrams, Krona plots can be made within Galaxy.
-</p>
-
-<p>To explore -omics data, interactive visualisations are available:</p>
-
-<ul>
-  <li>Integrated Genome Browser: Trackster</li>
-  <li>JBrowse, IGV</li>
-</ul>
-
-<hr>
-
-<h3 id="reproducibility-and-transparency">
-  <span class="material-icons py-1">share</span>
-  Reproducibility &amp; Transparency
-</h3>
-
-<p>The Galaxy platform is built on a foundation of reproductivity and transparency. All manipulations of your data, from upload through to results and export are captured and easily documented for your long-term records. Citation lists associated with tools used is a one click activity.
-</p>
-
-<p>Galaxy provides also a <strong>powerful workflow system</strong>. Workflows can be created by extraction of tools used from histories or built from scratch on an easy to use drag-and-drop canvas. Workflows are downloadable and sharable with everyone and contain all the necessary information to run the workflow, even as tools update (you get a time-locked workflow if tool versioning is a concern).
-</p>
-
-<p>The thousands of tools are available with fixed versions and are managed by <a href="https://bioconda.github.io/">Bioconda</a> and <a href="https://biocontainers.pro/">BioContainers</a>.
-</p>
-
-<p>4 TB of reference data are available on <a href="https://usegalaxy.org.au">https://usegalaxy.org.au</a> providing access to hundreds of reference genomes.
-</p>
-
-
-<hr>
-
-
-<h3 id="list-of-institutions">Galaxy Australia List of Australian Research Institutions</h3>
-
 <p>
-  Galaxy Australia provides advanced features and extended quotas to publicly funded Australian researchers, as described in our
-  <a href="#feature-catalogue">Feature Catalogue</a>.
-  Access to these features and quotas is available to account holders registered using an email address from one of the Australian Research Institutions recognised as listed in the table below.
+  We do this via a network of globally distributed
+  <a href="https://galaxyproject.org/admin/reference-data-repo/">data servers</a>
+  and
+  <a href="https://github.com/usegalaxy-au">open-source code</a>.
+  For more information on usegalaxy.* see the
+  <a href="https://galaxyproject.org/usegalaxy/">Galaxy Project Community Hub</a>
 </p>
-
-<p>
-  This table is based on the NHMRC list of
-  <a href="https://www.nhmrc.gov.au/funding/manage-your-funding/nhmrcs-administering-institutions">Approved Administering Institutions</a>.
-  We acknowledge that this list may not be exhaustive. Please contact us
-  (<a href="mailto:help@genome.edu.au">help@genome.edu.au</a>)
-  to request the addition of your research institution to this list.
-</p>
-
-{% include 'home/snippets/about/list-of-institutions.html' %}
