Clean up about pages and links

--- a/webapp/home/templates/home/aaf-institutions.html
+++ b/webapp/home/templates/home/aaf-institutions.html
@@ -12,11 +12,15 @@
 <main>
   <h3>Australian Access Federation (AAF) institutions</h3>
 
-  <p>
-    These institutions are reported to be registered with AAF. If you have an
-    email address associated with an institution on this list, you can sign into
-    Galaxy Australia with the "AAF" button and access extra resources.
-  </p>
+  <div class="my-5">
+    <p>
+      These institutions are reported to be registered with AAF. If you have an
+      email address associated with an institution on this list, you can sign into
+      Galaxy Australia using the "Sign in with AAF" button and access extra resources.
+    </p>
+  </div>
+
+  <p class="lead">Registered AAF institutions</p>
 
   <table class="table table-striped">
     <tbody>
