--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -86,7 +86,7 @@
           <br>
           Ready to install
         </p>
-        <a class="ga-btn" href="/support">
+        <a class="ga-btn" href="/request">
           Request now
         </a>
       </div>
@@ -100,7 +100,7 @@
           <br>
           Available on request
         </p>
-        <a class="ga-btn" href="/support">
+        <a class="ga-btn" href="/request">
           Request now
         </a>
       </div>
