--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -5,8 +5,8 @@
 </p>
 
 <p>
-  Galaxy Australia maintains tools, workflows and reference datasets as requested by the Australian research community, making the platform the ideal place for Australian researchers to perform their analyses. If we do not currently support your specific application or species then we will endeavour to make it available. Please,
-  <a href="/support">just ask</a>.
+  Galaxy Australia maintains tools, workflows and reference datasets as requested by the Australian research community, making the platform the ideal place for Australian researchers to perform their analyses. If we do not currently support your specific application or species then we will endeavour to make it available.
+  <a href="/request">Please just ask!</a>
 </p>
 
 <hr>
@@ -21,7 +21,7 @@
 <div class="textbox">
   <p class="fst-italic">
     "This work is supported by Galaxy Australia, a service provided by the Australian Biocommons and its partners. The service receives NCRIS funding through Bioplatforms Australia and the Australian Research Data Commons
-    <a href="https://doi.org/10.47486/PL105">(https://doi.org/10.47486/PL105)</a>,
+    <a href="https://doi.org/10.47486/PL105" target="_blank">(https://doi.org/10.47486/PL105)</a>,
     as well as Queensland Government RICF funding."
   </p>
 </div>
@@ -51,18 +51,18 @@
 <hr>
 
 <h3 id="usegalaxy">
-  The UseGalaxy.* initiative
+  The usegalaxy.* initiative
 </h3>
 
 <p>
-  <strong>Galaxy Australia</strong> is one of the large Galaxy servers that make up the <strong>usegalaxy.*</strong> initiative. Along with <strong>Galaxy Europe</strong> (<a href="https://usegalaxy.eu">usegalaxy.eu</a>) and <strong>Galaxy Main</strong> in the USA (<a href="https://usegalaxy.org">usegalaxy.org</a>), the <strong>usegalaxy.*</strong> servers aim to provide a global publicly available bioinformatics resource, present a similar look and feel, similar installed tool sets and reference data and indices.
+  <strong>Galaxy Australia</strong> is one of the large Galaxy servers that make up the <strong>usegalaxy.*</strong> initiative. Along with <strong>Galaxy Europe</strong> (<a href="https://usegalaxy.eu" target="_blank">usegalaxy.eu</a>) and <strong>Galaxy Main</strong> in the USA (<a href="https://usegalaxy.org" target="_blank">usegalaxy.org</a>), the <strong>usegalaxy.*</strong> servers aim to provide a global publicly available bioinformatics resource, present a similar look and feel, similar installed tool sets and reference data and indices.
 </p>
 
 <p>
   We do this via a network of globally distributed
-  <a href="https://galaxyproject.org/admin/reference-data-repo/">data servers</a>
+  <a href="https://galaxyproject.org/admin/reference-data-repo/" target="_blank">data servers</a>
   and
-  <a href="https://github.com/usegalaxy-au">open-source code</a>.
-  For more information on usegalaxy.* see the
-  <a href="https://galaxyproject.org/usegalaxy/">Galaxy Project Community Hub</a>
+  <a href="https://github.com/usegalaxy-au" target="_blank">open-source code</a>.
+  For more information on <strong>usegalaxy.*</strong> see the
+  <a href="https://galaxyproject.org/usegalaxy/" target="_blank">Galaxy Project Community Hub</a>
 </p>
