--- a/webapp/home/templates/home/snippets/about/acceptable-use.html
+++ b/webapp/home/templates/home/snippets/about/acceptable-use.html
@@ -52,7 +52,8 @@
     </ol>
   </li>
   <li>
-    Other uses of Galaxy Australia are only permitted with the written permission of the Galaxy Australia Service Manager (contact via
-    <a href="mailto:help@genome.edu.au">help@genome.edu.au</a>).
+    Other uses of Galaxy Australia are only permitted with the written permission of the Galaxy Australia Service Manager - please
+    <a href="/request/support">contact us</a>
+    if you feel that this is neccessary.
   </li>
 </ol>
