--- a/webapp/home/templates/home/snippets/about/data-privacy.html
+++ b/webapp/home/templates/home/snippets/about/data-privacy.html
@@ -223,8 +223,9 @@
         Registered account holders can see and modify the personal information collected by Galaxy Australia by logging into the service and navigating to “User” &#2192; “Preferences” &#2192; “Manage Information”.
       </li>
       <li>
-        Registered account holders can request removal of personal information at any time by emailing
-        <a href="mailto:help@genome.edu.au.">help@genome.edu.au.</a>
+        Registered account holders can request removal of personal information at any time. Please
+        <a href="/request/support">contact us</a>
+        if you are in this position.
       </li>
     </ol>
   </li>
