--- a/webapp/home/templates/home/snippets/about/feature-catalogue.html
+++ b/webapp/home/templates/home/snippets/about/feature-catalogue.html
@@ -30,7 +30,7 @@
 
 <p>
   The inclusion of additional tools, reference genomes, and annotation data can be
-  <a href="/support">requested</a>.
+  <a href="/request">requested</a>.
 </p>
 
 
@@ -102,12 +102,13 @@
 
   <ul>
     <li>
-      <em>“Registered Australian Researchers”</em> are those with accounts registered using an email address from our
-      <a href="/list-of-institutions.html">List of Australian Research Institutions</a>
+      <em>Registered Australian Researchers</em> are those with accounts registered using an email address from our
+      <a href="/list-of-institutions.html">List of Australian Research Institutions</a>, or users who have signed in
+      <a href="/aaf">using AAF</a>.
     </li>
 
     <li>
-      <em>“Other Registered accounts”</em> are those registered from any other email address
+      <em>Other Registered accounts</em> are those registered from any other email address
     </li>
 
     <li>
