--- a/webapp/home/templates/home/pages/list-of-institutions.html
+++ b/webapp/home/templates/home/pages/list-of-institutions.html
@@ -21,8 +21,8 @@
   <p>
     This table is based on the NHMRC list of
     <a href="https://www.nhmrc.gov.au/funding/manage-your-funding/nhmrcs-administering-institutions">Approved Administering Institutions</a>.
-    We acknowledge that this list may not be exhaustive. Please contact us
-    (<a href="mailto:help@genome.edu.au">help@genome.edu.au</a>)
+    We acknowledge that this list may not be exhaustive. Please
+    (<a href="request/support/">contact us</a>)
     to request the addition of your research institution to this list.
   </p>
 
