--- a/webapp/home/templates/home/snippets/about/terms-of-service.html
+++ b/webapp/home/templates/home/snippets/about/terms-of-service.html
@@ -144,6 +144,6 @@
 </ol>
 
 <p>
-  If you have any questions or comments with respect to Galaxy Australia, or if you are unsure whether your intended use complies with these Terms of Use, or if you seek permission for an intended use that does not fall within these Terms of Use, please contact us via
-  <a href="mailto:help@genome.edu.au">help@genome.edu.au</a>.
+  If you have any questions or comments with respect to Galaxy Australia, or if you are unsure whether your intended use complies with these Terms of Use, or if you seek permission for an intended use that does not fall within these Terms of Use, please
+  <a href="/request/support">contact us</a>.
 </p>
