--- a/webapp/home/templates/home/snippets/imports.html
+++ b/webapp/home/templates/home/snippets/imports.html
@@ -1,9 +1,9 @@
 {% load static %}
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 <link rel="stylesheet" href="{% static 'vendor/fontawesome-5.15.4/css/all.css' %}"/>
+<link rel="stylesheet" href="{% static 'vendor/material-icons.css' %}">
 <link rel="stylesheet" href="{% static 'home/css/main.css' %}">
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
