Fix syntax errors

--- a/webapp/home/templates/home/requests/quota.html
+++ b/webapp/home/templates/home/requests/quota.html
@@ -20,9 +20,9 @@
 
     <small>
       Read about our
-      <a href="/about/#feature-catalog">data storage limits</a>
+      <a href="/about#feature-catalog">data storage limits</a>
       &amp;
-      <a href="/about/#data-privacy">data privacy policy</a>.
+      <a href="/about#data-privacy">data privacy policy</a>.
     </small>
   </div>
 
@@ -61,7 +61,7 @@
           class="form-control" id="dateInput" type="date" name="start_date"
           value="{{form.start_date.value|default_if_none:''}}" required
         >
-        {{ form.date.errors }}
+        {{ form.start_date.errors }}
       </div>
 
       <div class="col-md-6">
