--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -5,7 +5,7 @@
 
   <head>
     {% include 'home/snippets/head.html' %}
-    <title> {% if title %}{{ title }}{% else %}Galaxy {{ GALAXY_SITE_NAME }} Media{% endif %} </title>
+    <title> {% if title %}{{ title }}{% else %}Galaxy {{ GALAXY_SITE_NAME }} {{ GALAXY_SITE_SUFFIX }}{% endif %} </title>
     {% include 'home/snippets/imports.html' %}
     {% include 'home/snippets/posthog.html' %}
 
@@ -26,7 +26,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg embedded">
       <a class="navbar-brand" href="/">
-        <span class="australia">Galaxy {{ GALAXY_SITE_NAME }}</span> Media
+        <span class="australia">Galaxy {{ GALAXY_SITE_NAME }}</span> {{ GALAXY_SITE_SUFFIX }}
       </a>
 
       <div class="collapse navbar-collapse mr-auto" id="navbarNavAltMarkup">
