Remove hover animation from active navbar link

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -58,7 +58,7 @@ nav.embedded {
 nav.embedded a.active {
   color: #555;
 }
-nav.embedded a:hover, a.nav-link:hover {
+nav.embedded a:hover, nav.embedded a.nav-link:hover {
   color: #555;
 }
 nav.embedded a.navbar-brand,
