Fix broken links

--- a/webapp/home/templates/home/snippets/about/data-privacy.html
+++ b/webapp/home/templates/home/snippets/about/data-privacy.html
@@ -143,8 +143,9 @@
         When you submit a support request with Galaxy Australia, we collect your email address, and may ask for personal data as part of the support process.
       </li>
       <li>
-        Data collected as part of a support request is stored in our instance of Freshdesk and is subject the Freshworks Privacy Policy which can be found at
-        <a href="https://www.freshworks.com/privacy/">https://www.freshworks.com/privacy/</a>.
+        Data collected as part of a support request is stored in our instance of Freshdesk - please refer to the
+        <a href="https://www.freshworks.com/privacy/">Freshworks Privacy Policy</a>
+        for more information.
       </li>
     </ol>
   </li>
@@ -179,7 +180,7 @@
       </li>
       <li>
         Information about Google’s Privacy Policy and options for controlling the data collected by Google can be found
-        <a href="www.google.com/policies/privacy/partners/">here</a>.
+        <a href="https:/www.google.com/policies/privacy/partners/">here</a>.
       </li>
     </ol>
   </li>
