--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg embedded">
+    <nav class="navbar fixed-top navbar-expand-sm embedded">
       <a class="navbar-brand" href="/">
         <span class="australia">Galaxy {{ GALAXY_SITE_NAME }}</span> {{ GALAXY_SITE_SUFFIX }}
       </a>
