--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -15,8 +15,7 @@
   Galaxy Australia Acknowledgment Statement
 </h3>
 
-<p>When you use Galaxy Australia to support your publication or project, please cite its use using the following acknowledgement statement:
-</p>
+<p>When you use Galaxy Australia to support your publication or project, please acknowledge its use with the following statement: </p>
 
 <div class="textbox">
   <p class="fst-italic">
