--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -84,18 +84,18 @@ footer {
   height: 1.75rem;
   margin: .5rem;
 }
-footer .col-auto {
-  padding: 0 2rem;
+#footer-links-row {
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+footer .col-6 {
+  padding: 0 1rem;
+  max-width: fit-content;
 }
 footer .links h6 {
   font-size: 0.8rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
-}
-footer .links img {
-  height: 35px;
-  width: auto;
-  margin: 2.75rem 1.5rem;
 }
 footer .links a {
   color: inherit;
@@ -106,6 +106,15 @@ footer small {
 }
 footer p.tight {
   line-height: 1.15;
+}
+#footer-galaxy-logo {
+  text-align: end;
+  padding: 1rem;
+}
+#footer-galaxy-logo img {
+  height: 35px;
+  width: auto;
+  margin: 2.75rem 1.5rem;
 }
 
 /* Layout */
@@ -224,7 +233,58 @@ h6.header {
 }
 
 /* Responsive */
-@media(max-width: 576px) {
+@media (max-width: 992px) {
+  :root {
+    font-size: 14px;
+  }
+  body {
+    padding: 4.5rem 1rem 1rem 1rem;
+  }
+  nav {
+    padding: .5rem 1rem;
+  }
+  /* Footer */
+  #footer-site-links {
+    margin-top: 1rem;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+  }
+  #footer-galaxy-logo {
+    display: none;
+  }
+  footer .col-md-6 {
+    min-width: fit-content;
+  }
+}
+@media (max-width: 842px) {
+  .tile {
+    max-width: 25vw;
+    margin: .5rem;
+  }
+  .card-body {
+    padding: .5rem;
+  }
+}
+@media (max-width: 720px) {
+  .tile {
+    max-width: 180px;
+  }
+  #stats-panel iframe {
+    transform: scale(0.75);
+    transform-origin: 0 0;
+  }
+  #iframe-chart {
+    width: 133%;
+    height: 250px;
+  }
+  .counters iframe {
+    width: 126%;
+    height: 140px;
+  }
+}
+
+
+@media (max-width: 576px) {
   body {
     padding: 6rem .5rem 1rem .5rem;
   }
