--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -109,32 +109,32 @@
 
   <section id="stats-panel">
     <div>
-      <iframe width="100%" height="200px" src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=10s&panelId=2" frameborder="0" onload=notifyLoaded(1);></iframe>
+      <iframe id="iframe-chart" src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=10s&panelId=2" frameborder="0" onload=notifyLoaded(1);></iframe>
     </div>
 
-    <div class="row justify-content-between">
+    <div class="row justify-content-between counters">
       <img class="loading" src="{% static 'home/img/spinner.svg' %}" alt="Loading stats">
 
       <div class="col">
-        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=19" width="95%" height="110px" frameborder="0" onload=notifyLoaded(2);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=19" frameborder="0" onload=notifyLoaded(2);></iframe>
       </div>
 
       <div class="col">
-        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=21" width="95%" height="110px" frameborder="0" onload=notifyLoaded(3);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=21" frameborder="0" onload=notifyLoaded(3);></iframe>
       </div>
 
       <div class="col">
-        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=23" width="95%" height="110px" frameborder="0" onload=notifyLoaded(4);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=23" frameborder="0" onload=notifyLoaded(4);></iframe>
       </div>
 
       <div class="col">
-        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=25" width="95%" height="110px" frameborder="0" onload=notifyLoaded(5);></iframe>
+        <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&refresh=1d&panelId=25" frameborder="0" onload=notifyLoaded(5);></iframe>
       </div>
     </div>
   </section>
 
   <section class="row no-gutter" id="news-events">
-    <div class="col-sm-6 px-3" id="news">
+    <div class="col-md-6 px-3" id="news">
       <div class="row justify-content-between">
         <div class="col">
           <h4>News</h4>
@@ -167,7 +167,7 @@
       {% endfor %}
     </div>
 
-    <div class="col-sm-6 px-3">
+    <div class="col-md-6 px-3">
       <div class="row justify-content-between">
         <div class="col">
           <h4>Events and workshops</h4>
