--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -58,57 +58,67 @@
 
   <div class="container links">
     <hr>
-    <div class="row justify-content-center">
-      <img
-        src="{% static 'logos/footer/galaxy-black.svg' %}"
-        alt="Galaxy logo black">
+    <div class="row" id="footer-links-row">
+      <div class="col" id="footer-galaxy-logo">
+        <a href="/">
+          <img
+          src="{% static 'logos/footer/galaxy-black.svg' %}"
+          alt="Galaxy logo black"
+          >
+        </a>
+      </div>
 
-      <div class="col-auto">
+      <div class="col-6">
         <h6>SITE LINKS</h6>
-        <div class="row">
-          <div class="col">
+        <div class="row" id="footer-site-links">
+          <div class="col-md-6">
             <small>
-              <a href="#">Support</a> <br>
-              <a href="#">Feature catalogue</a> <br>
-              <a href="#">Terms and conditions</a>
+              <a href="/request">Support</a> <br>
+              <a href="/about#acknowledgement-statement">Acknowledging Galaxy Australia</a> <br>
+              <a href="/about#feature-catalogue">Feature catalogue</a> <br>
+              <a href="/about#terms-of-service">Terms and conditions</a>
             </small>
           </div>
 
-          <div class="col">
+          <div class="col-md-6">
             <small>
-              <a href="#">Privacy and data collection</a> <br>
-              <a href="#">Acceptable use</a> <br>
-              <a href="#">Service labels</a>
+              <a href="/about#data-privacy">Privacy and data collection</a> <br>
+              <a href="/about#acceptable-use">Acceptable use</a> <br>
+              <a href="/about#service-levels">Service levels</a>
             </small>
           </div>
         </div>
       </div>
 
-      <div class="col-sm-4">
-        <h6>ACKNOWLEDGEMENTS</h6>
-        <p class="tight">
-          <small>
-            We acknowledge and pay respect to the Elders and Traditional Owners
-            of the lands on which our partner organisations stand.
-          </small>
-        </p>
-      </div>
+      <div class="col-6">
+        <div class="row">
+          <div class="col-md-6">
+            <h6>ACKNOWLEDGEMENTS</h6>
+            <p class="tight">
+              <small>
+                We acknowledge and pay respect to the Elders and Traditional Owners
+                of the lands on which our partner organisations stand.
+              </small>
+            </p>
+          </div>
 
-      <div class="col-auto">
-        <h6>CONNECT</h6>
-        <p>
-          <a href="mailto:help@genome.edu.au">
-            <i class="fas fa-envelope"></i>
-          </a>
+          <div class="col-md-6">
+            <h6>CONNECT</h6>
+            <p>
+              <a href="mailto:help@genome.edu.au">
+                <i class="fas fa-envelope"></i>
+              </a>
 
-          <a href="https://github.com/usegalaxy-au" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
+              <a href="https://github.com/usegalaxy-au" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
 
-          <a href="https://twitter.com/galaxyaustralia" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </p>
+              <a href="https://twitter.com/galaxyaustralia" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
